# five-bar_gripper

./: CMakeLists.txt
src/: BPC_path_parameters
src/kinematics/: CMakeLists.txt
src/kinematics/include/: kinematics.h
src/kinematics/test/: test.cpp
src/pi3hat/: moteus_protocol.h  pi3hat.cc  pi3hat_interface.cpp  pi3hat_interface.h  pi3hat_moteus_interface.h
src/power_monitor/: CMakeLists.txt
src/power_monitor/include/: power_monitor.h  smbus.h
src/power_monitor/src/: power_monitor_test.cpp  smbus.cpp
src/tests/: CMakeLists.txt
src/tests/src/: test_FK.cpp  test_IK.cpp  test_Singularity.cpp  test_bpc_trap_traj.cpp  test_force.cpp  test_gripp_mode.cpp  test_gripp_mode_v2.cpp  test_line_trap_traj.cpp  test_max_loading.cpp  test_max_tracking_freq.cpp  test_op_mode_switch.cpp  test_position_signs.cpp  test_pow_con.cpp  test_pow_con3.cpp  test_sense_grip_both_fingers.cpp  test_sense_gripp.cpp  test_sense_mode.cpp  test_sense_object.cpp  test_settling_time.cpp  test_sinetraj_IK.cpp  test_ss_error.cpp  test_stiffness_UTM.cpp  test_velocity_ellipse.cpp
src/trajectory_planner/: CMakeLists.txt
src/trajectory_planner/include/: trajectory_planner.h
src/trajectory_planner/src/: .straight_line.cpp.swp  test_dynamic_tracking_socket_comm.cpp  trajectory_planner.cpp
src/trajectory_planner/test/: plot_pub2.py  publisher.cpp  subscriber.py  test.cpp  test_TTBPC.cpp  test_bpc_traj.cpp  test_dynamic_tracking_plot.cpp  test_dynamic_tracking_socket_comm.cpp  test_socket_comm.cpp  test_tptraj_BPC_2R.cpp  test_tptraj_BPC_2R_all_freq.cpp  test_withIK.cpp
verify_codes/: 240827 five-bar gripper verify.nb  gripp_to_sense.csv  sense_to_gripp.csv  test.csv  test_sense_2mm_rod.csv  test_sense_5mm_rope.csv  test_sense_hard_object.csv  test_sense_no_object.csv  test_sense_no_object_v2.csv  test_sense_rope_light_touch_v2.csv  test_sense_rope_object.csv  test_sense_rope_object_v2.csv
verify_codes/log/: force_UTM_gripp_mode_240905_sample77.csv  force_UTM_gripp_mode_240905_sample81_trial2.csv  force_UTM_sense_mode_240905_sample75.csv  gripp_test_1inch_wood_block_UTM_test_sample56_240905.csv  gripp_test_sense_output_mode_1inch_wood_sample58_240905.csv  sense_mode_gripp_UTM_horizontal gripper_240910_trial2_sample103.csv  sense_mode_gripp_UTM_horizontal gripper_240910_trial3_sample104.csv  sense_right_finger_16cm_brass_rod.csv  sense_right_finger_UTM_horizontal_gripper.csv  stiffness_UTM_gripp_mode_240905_sample69.csv  stiffness_UTM_sense_mode_240905_sample64.csv  stiffness_UTM_sense_mode_240905_sample71.csv  test.csv  test_pringles_sense_grip_same_threshold.csv  test_pringles_sense_grip_trial1.csv  test_pringles_sense_grip_trial2.csv  test_pringles_sense_grip_trial3.csv  test_pringles_sense_grip_trial4.csv
